* Notifications of tickets and grants now use the same locale that was used
  during the creation of the ticket/grant itself.
* A new "Preferences" page has been added, allowing users to change their
  password (only when using internal authentication).
* Changing "hours after last download" when editing a ticket was fixed.
* A new REST API has been implemented, allowing external applications to use the
  service programmatically.
* Two python clients have been added to the distribution: a command-line python
  client "dl-cli" and a graphical client "dl-wx".
* Minor bug and UI fixes.

Please note: DL 0.10 requires a database schema and webserver configuration
update! Please read the database upgrade procedure in the README and the
relevant notes about web server configuration.


dl 0.9.1: 31/12/2011
--------------------

* Fixed a grave security issue: unauthorized parties can perform login as any
  arbitrary user when using the built-in authentication mechanism by supplying
  an authorization header. DL versions down to 0.3 are affected.


dl 0.9: 06/04/2011
------------------

* The settings of tickets and grants are now stored independently.
* Default ticket/grant settings can be specified in the config file.
* Most ticket and grant options are now moved into an "advanced" panel.
* Grant notifications now include the ticket password in the message.
* Form validation is now also performed in JavaScript.
* Enlarged the width of the interface to 800px.
* Users management is now available through the web interface.
* French, Italian, Spanish and German translation.
* Multi-line comments can be attached to tickets and grants.
* Improved the e-mail notification text.
* Improved ticket and grant listings.
* Tickets can now be edited after being created.
* Minor bug and UI fixes.


dl 0.8: 10/07/2010
------------------

* Update PHP-Gettext to 1.1.10 (fixing several PHP Notices).
* Fix browser language autodetection (typo, thanks to Bert-Jan Kamp).